--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "forge-oauth2",
-  "version": "1.0.2",
-  "description": "Asynchronous Node.js library for the Autodesk Forge oAuth2 implementation",
+  "version": "1.0.3",
+  "description": "Asynchronous Node.js library for the Autodesk Forge oAuth2 implementation.",
   "homepage": "https://developer.autodesk.com/",
   "repository": {
     "type": "git",
