--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "forge-oauth2",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "Asynchronous Node.js library for the Autodesk Forge oAuth2 implementation.",
   "homepage": "https://developer.autodesk.com/",
   "repository": {
     "type": "git",
-    "url": "https://github.com/autodesk-forge/forge.oauth2-js"
+    "url": "https://github.com/cyrillef/forge.oauth2-js"
   },
   "bugs": {
-    "url": "https://github.com/autodesk-forge/forge.oauth2-js/issues"
+    "url": "https://github.com/cyrillef/forge.oauth2-js/issues"
   },
   "author": "",
   "contributors": [
@@ -29,7 +29,7 @@
     "api"
   ],
   "dependencies": {
-    "request": "2.74.0"
+    "forge-apis": "0.2.7"
   },
   "devDependencies": {
     "mocha": "~2.3.4",
